@@ -5,42 +5,43 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.queimazero.queimazeroAPI.models.Coordenadas;
 import org.springframework.stereotype.Service;
 
+import java.io.IOException;
 import java.math.BigDecimal;
 import java.net.URI;
-import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.nio.charset.StandardCharsets;
 
 @Service
 public class GeolocalizacaoService {
-    private static final String NOMINATIM_URL = "https://nominatim.openstreetmap.org/search";
-    private static final ObjectMapper objectMapper = new ObjectMapper();
+    private static final String API_URL = "https://nominatim.openstreetmap.org/search?format=json&q=";
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
-    public static Coordenadas geocode(String endereco) throws Exception {
-        String query = URLEncoder.encode(endereco, StandardCharsets.UTF_8);
-        String url = String.format("%s?format=json&q=%s", NOMINATIM_URL, query);
+    public Coordenadas obterCoordenadas(String address) throws IOException, InterruptedException {
+        String encodedAddress = java.net.URLEncoder.encode(address, "UTF-8");
 
         HttpClient client = HttpClient.newHttpClient();
         HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(url))
-                .header("User-Agent", "JavaNominatimClient/1.0")
+                .uri(URI.create(API_URL + encodedAddress))
+                .header("User-Agent", "Your Application Name")
                 .build();
 
         HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-        if (response.statusCode() == 200) {
-            JsonNode rootNode = objectMapper.readTree(response.body());
-            if (rootNode.isArray() && rootNode.size() > 0) {
-                JsonNode primeiroResultado = rootNode.get(0);
-                BigDecimal lat = primeiroResultado.get("lat").decimalValue();
-                BigDecimal lon = primeiroResultado.get("lon").decimalValue();
-                return new Coordenadas(lat, lon);
-            }
-        } else {
-            throw new RuntimeException("Erro na requisição: " + response.statusCode());
+        if (response.statusCode() != 200) {
+            throw new IOException("Erro na requisição: " + response.statusCode());
         }
-        return null;
+
+        // Usar JsonNode para navegar no JSON
+        JsonNode rootNode = objectMapper.readTree(response.body());
+        if (rootNode.size() == 0) {
+            throw new IOException("Nenhum resultado encontrado para o endereço fornecido");
+        }
+
+        JsonNode firstResult = rootNode.get(0);
+        BigDecimal lat = new BigDecimal(firstResult.get("lat").asText());
+        BigDecimal lon = new BigDecimal(firstResult.get("lon").asText());
+
+        return new Coordenadas(lat, lon);
     }
 }
